syntax = "proto3";

package events;

option go_package = "github.com/robert/simple-memorizer-4/proto/events";

message BadAnswer {
  uint32 exerciseID = 1;
}
