syntax = "proto3";

package events;

option go_package = "proto/events";

message GoodAnswer {
  uint32 exerciseID = 1;
}
